--- a/XMLtoDTDConverter/XMLtoDTDConverter/XMLtoDTDConverter.vbproj
+++ b/XMLtoDTDConverter/XMLtoDTDConverter/XMLtoDTDConverter.vbproj
@@ -23,7 +23,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>XMLtoDTDConverter.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <IntermediateOutputPath>C:\Users\POOPIE~1\AppData\Local\Temp\vsEB9C.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\saeleeke\AppData\Local\Temp\vs598A.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,7 +34,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DocumentationFile>XMLtoDTDConverter.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <IntermediateOutputPath>C:\Users\POOPIE~1\AppData\Local\Temp\vsEB9C.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\saeleeke\AppData\Local\Temp\vs598A.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <OptionExplicit>On</OptionExplicit>
