--- a/PowershellWeb/PowerShellWeb/PowerShellWeb/packages.config
+++ b/PowershellWeb/PowerShellWeb/PowerShellWeb/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Management.Automation" version="6.1.7601.17515" targetFramework="net461" />
 </packages>
